[gd_scene load_steps=16 format=3 uid="uid://b5nyeh7i3pksd"]

[ext_resource type="Material" uid="uid://dwxmyaelgy452" path="res://materials/floor.tres" id="1_3gpte"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_e8nyy"]
[ext_resource type="PackedScene" uid="uid://bi58j63wy464l" path="res://scenes/projectile.tscn" id="2_slfct"]
[ext_resource type="Material" uid="uid://8otdwm8l733k" path="res://materials/wall.tres" id="3_m2nix"]
[ext_resource type="PackedScene" uid="uid://bpnw2upvb5l7a" path="res://scenes/player.tscn" id="4_q022u"]
[ext_resource type="Material" uid="uid://cq25520xpxe8d" path="res://materials/enemy.tres" id="4_v6vy5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7e276"]
sky_top_color = Color(0.0509804, 0.478431, 0.701961, 1)
sky_horizon_color = Color(0.901961, 0.470588, 0.85098, 1)
sky_curve = 0.0652914
sky_energy_multiplier = 2.0
ground_bottom_color = Color(0.85098, 0.803922, 0.756863, 1)
ground_horizon_color = Color(1, 1, 1, 1)
ground_energy_multiplier = 0.2

[sub_resource type="Sky" id="Sky_qvtow"]
sky_material = SubResource("ProceduralSkyMaterial_7e276")

[sub_resource type="Environment" id="Environment_fls7v"]
background_mode = 2
sky = SubResource("Sky_qvtow")
tonemap_mode = 2
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/3 = 2.0
glow_levels/4 = 1.0
glow_levels/5 = 2.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_wtclk"]

[sub_resource type="BoxMesh" id="BoxMesh_qcfim"]

[sub_resource type="BoxMesh" id="BoxMesh_el15j"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gyl6g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cyrol"]
size = Vector3(1, 1, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_fhiil"]
size = Vector3(25, 1, 50)

[node name="World" type="Node3D"]
script = ExtResource("1_e8nyy")
projectile_scene = ExtResource("2_slfct")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_fls7v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="StaticBodies" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="WallMesh1" type="MeshInstance3D" parent="StaticBodies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 50, -12, 0, 0)
material_override = ExtResource("3_m2nix")
mesh = SubResource("BoxMesh_wtclk")
skeleton = NodePath("../..")

[node name="WallMesh2" type="MeshInstance3D" parent="StaticBodies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 50, 12, 0, 0)
material_override = ExtResource("3_m2nix")
mesh = SubResource("BoxMesh_wtclk")
skeleton = NodePath("../..")

[node name="FloorMesh" type="MeshInstance3D" parent="StaticBodies"]
transform = Transform3D(25, 0, 0, 0, 1, 0, 0, 0, 50, 0, -1, 0)
material_override = ExtResource("1_3gpte")
mesh = SubResource("BoxMesh_qcfim")
skeleton = NodePath("../..")

[node name="TargetLine" type="MeshInstance3D" parent="StaticBodies"]
transform = Transform3D(23, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.45, 22.5)
material_override = ExtResource("4_v6vy5")
mesh = SubResource("BoxMesh_el15j")

[node name="TargetLineArea" type="Area3D" parent="StaticBodies/TargetLine"]
collision_mask = 2

[node name="TargetLineShape" type="CollisionShape3D" parent="StaticBodies/TargetLine/TargetLineArea"]
shape = SubResource("BoxShape3D_gyl6g")

[node name="WallShape1" type="CollisionShape3D" parent="StaticBodies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)
shape = SubResource("BoxShape3D_cyrol")

[node name="WallShape2" type="CollisionShape3D" parent="StaticBodies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)
shape = SubResource("BoxShape3D_cyrol")

[node name="FloorShape" type="CollisionShape3D" parent="StaticBodies"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_fhiil")

[node name="UI" type="Node3D" parent="."]

[node name="UI3D_Right" type="Node3D" parent="UI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 2, 22)

[node name="EnemiesDefendedTextLabel" type="Label3D" parent="UI/UI3D_Right"]
text = "Enemies defended:"
font_size = 64

[node name="EnemiesDefendedValueLabel" type="Label3D" parent="UI/UI3D_Right/EnemiesDefendedTextLabel"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
billboard = 1
text = "---
"
font_size = 64

[node name="UI3D_Left" type="Node3D" parent="UI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 2, 22)

[node name="EnemyCreationSpeedTextLabel" type="Label3D" parent="UI/UI3D_Left"]
text = "Enemy creation speed:
New enemy every"
font_size = 64

[node name="EnemyCreationSpeedValueLabel" type="Label3D" parent="UI/UI3D_Left/EnemyCreationSpeedTextLabel"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0)
text = "---
"
font_size = 64

[node name="Timers" type="Node3D" parent="."]

[node name="EnemyCreationTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
autostart = true

[node name="TreePrintingTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 10.0

[node name="Player" parent="." instance=ExtResource("4_q022u")]
unique_name_in_owner = true

[node name="Projectiles" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Enemies" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Explosions" type="Node3D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="StaticBodies/TargetLine/TargetLineArea" to="." method="_on_target_line_area_body_entered"]
[connection signal="timeout" from="Timers/EnemyCreationTimer" to="." method="_on_enemy_creation_timer_timeout"]
[connection signal="timeout" from="Timers/TreePrintingTimer" to="." method="_on_tree_printing_timer_timeout"]
